Fix deprecated newInstance